--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,26 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    // Jackson excludes
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
     }
 }
 
@@ -24,6 +39,13 @@ dependencies {
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.code.gson:gson:2.3'
+
+    compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.2'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.4.2'
+    compile 'com.octo.android.robospice:robospice-spring-android-parent:1.4.14' // Jackson Persister/Factory
+
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
 
     compile project(':libsuperuser')
 }
