Added default preference values

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.octo.android.robospice:robospice-spring-android-parent:1.4.14' // Jackson Persister/Factory
 
     compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
 
     compile project(':libsuperuser')
 }
